--- a/popup.css
+++ b/popup.css
@@ -158,6 +158,7 @@
 	bottom: 165px;
 	border: 1px solid black;
 	background: white;
+	z-index: 5;
 }
 
 .embed-dialog-button-block {
@@ -196,4 +197,35 @@
 
 .default-text-active {
 	color: #a1a1a1; font-style: italic;
+}
+
+.in-progress-div {
+	position: absolute;
+	z-index: 3;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	opacity:0.5;
+	filter:alpha(opacity=50);
+	-moz-opacity:0.5;
+	background-color:#000000;
+}
+
+.in-progress-vertical {
+	width: 100%;
+	position: absolute;
+	height: 50%;
+	top: 50%;
+}
+
+.in-progress-horizontal {
+	position: absolute;
+	width: 50%;
+	left: 50%;
+}
+
+.in-progress-image {
+	margin-left: -50px;
+	margin-top: -50px;
 }
